appId: com.unlockhub.app
---
- runFlow: _setup_login.yaml

- tapOn: "Steam"
- waitForAnimationToEnd
- assertNotVisible: "Something went wrong"

- tapOn: "RetroAchievements"
- waitForAnimationToEnd
- assertNotVisible: "Something went wrong"

- tapOn: "PlayStation"
- waitForAnimationToEnd
- assertNotVisible: "Something went wrong"

- tapOn: "All"
- waitForAnimationToEnd
- assertNotVisible: "Something went wrong"
- assertVisible: "Library"
